# SPOIC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  field.f90  read_spec.f90  spoic.f90  spoic.jl  spoic_plot.py
RUN/: spoic.x  test.sp  xspec
